# Ku_Weak_Moment-code-supplement

./: .gitignore  CITATION.cff  README.md  lake-manifest.json  lakefile.lean  pyproject.toml  requirements.txt
Lean/: WeakMoment.lean
Lean/WeakMoment/: Foundations.lean  Moments.lean  Score.lean
experiments/adversarial_leverage/: config.yaml  run.py  verify.py
experiments/asymmetric_regression/: config.yaml  plot.py  run.py  verify.py
experiments/bandwidth_study/: config.yaml  plot.py  run.py
experiments/cauchy_location/: config.yaml  plot.py  run.py  verify.py
experiments/cauchy_regression_pmm/: config.yaml  plot.py  run.py  verify.py
experiments/cf_weighting/: config.yaml  run.py  verify.py
experiments/design_stress/: config.yaml  plot.py  run.py  verify.py
experiments/full_mc/: config.yaml  plot.py  run.py  verify.py
experiments/modern_baselines/: config.yaml  run.py  verify.py
experiments/real_data_phones/: config.yaml  plot.py  run.py  verify.py
experiments/recentering_ablation/: config.yaml  run.py  verify.py
experiments/stable_competitor/: config.yaml  run.py  verify.py
experiments/symmetric_pmm3/: config.yaml  plot.py  run.py  verify.py
experiments/threshold_sensitivity/: run.py  verify.py
experiments/weak_cf_heavy/: config.yaml  plot.py  run.py  verify.py
experiments/weak_moment_sanity/: config.yaml  plot.py  run.py  verify.py
reports/: lean_theory_verification_report.md
src/ku_weak_moment/: __init__.py  estimators.py  inference.py  moments.py  simulation.py  windows.py  (+1 more)
tests/: test_invariants.py  test_weak_moment_core.py
